--- a/style.css
+++ b/style.css
@@ -1,21 +1,5 @@
 /* default */
 
-
-
-.smallFont {
-  font-size: 12px;
-}
-
-.largeFont {
-  font-size: 20px;
-}
-
-
-.headerText {
-  color: #7b6c63;
-}
-
-
 .text {
   color: #949494;
 }
@@ -34,8 +18,6 @@
   height: 100%;
   font-size: 16px;
   color: #000;
-  font-weight: 400;
-  line-height: 1.2em;
   font-family: "Helvetica Neue", Helvetica, Arial, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
 }
 
@@ -47,18 +29,6 @@
 
 .headerInner {
   padding-top: 15px;
-}
-
-.visual {
-  width: 100%;
-  height: 400px;
-  background-image: url(images/bg.png);
-  background-position: 0 -50px;
-  background-size: 100% auto;
-  background-repeat: no-repeat;
-}
-
-.visualInner {
 }
 
 #content {
@@ -114,10 +84,47 @@
   padding-bottom: 4px;
 }
 
+.visual {
+  width: 100%;
+  height: 450px;
+  background-image: url(images/bg.png);
+  background-position: 0 -50px;
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+}
+
+.visualInner {
+  padding-top: 130px;
+}
+
+.visualText {
+  color: #FFF;
+}
+
+.visualTitle {
+  margin: 5px 0 30px 0;
+  font-size: 40px;
+  line-height: 1.2em;
+}
+
+.visualTitleColor {
+  color: #7b6c63;
+}
+
 .visualContact {
-  border: solid;
-  padding: 10px;
+  display: block;
+  width: 200px;
+  padding: 15px 0px;
+  text-align: center;
+  background-color: rgba(200,200,200,0.2);
+}
+
+.visualContact:hover {
   background-color: rgba(200,200,200,0.4);
+}
+
+.visualContactText {
+  color: #FFF;
 }
 
 .about {
