--- a/style.css
+++ b/style.css
@@ -1,10 +1,5 @@
 /* default */
 
-.text {
-  color: #949494;
-}
-
-
 /* common */
 .layoutInner {
   margin: 0 auto;
@@ -57,8 +52,8 @@
   width: 50%;
   font-size: 24px;
   color: #FFF;
-  font-weight: 500;
-  font-family: sans-serif;
+  font-weight: 400;
+  letter-spacing: 0.08em;
 }
 
 .menu {
@@ -76,7 +71,7 @@
 .menuInner {
   font-size: 12px;
   color: #FFF;
-  font-family: sans-serif;
+  font-weight: 300;
 }
 
 .menuInner:hover {
@@ -89,7 +84,7 @@
   height: 450px;
   background-image: url(images/bg.png);
   background-position: 0 -50px;
-  background-size: 100% auto;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
@@ -104,7 +99,9 @@
 .visualTitle {
   margin: 5px 0 30px 0;
   font-size: 40px;
+  font-weight: 400;
   line-height: 1.2em;
+  letter-spacing: 0.08em;
 }
 
 .visualTitleColor {
@@ -128,27 +125,66 @@
 }
 
 .about {
+}
+
+.aboutInner {
+  width: 45%;
+  margin: 0 auto;
   text-align: center;
 }
 
-.aboutContents {
+.aboutTitle {
+  padding-bottom: 20px;
+  font-size: 30px;
+  color: #7b6c63;
+  font-weight: 400;
+  letter-spacing: 0.09em;
+}
+
+.aboutTitleUnderLine {
+  display: block;
+  width: 50px;
+  height: 1px;
+  margin: 0 auto;
+  padding-bottom: 20px;
+  border: 0;
+  border-top: 2px solid #000;
+}
+
+.aboutText {
+  padding-bottom: 50px;
+  color: #000;
+  line-height: 1.6em;
+}
+
+.business {
   display: table;
   table-layout: fixed;
   width: 100%;
 }
 
-.aboutInner {
+.businessInner {
   display: table-cell;
-  vertical-align: middle;
+  vertical-align: baseline;
   text-align: center;
   padding-left: 10px;
 }
 
-.aboutInner:first-child {
+.businessInner:first-child {
   padding-left: 0;
 }
 
+.businessInnerTitle {
+  padding: 10px 0;
+  font-weight: 300;
+  letter-spacing: 0.08em;
+}
 
+.businessInnerText {
+  font-size: 13px;
+  color: #949494;
+  line-height: 1.6em;
+}
 
 .copyright {
   text-align: center;
