--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@
   margin: 0 auto;
   padding-bottom: 20px;
   border: 0;
-  border-top: 2px solid #000;
+  border-top: 2px solid #7b6c63;
 }
 
 .aboutText {
