--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-/* default */
+
+
 
 /* common */
 .layoutInner {
   margin: 0 auto;
-  max-width: 70%;
+  max-width: 1040px;
 }
-
 
 /* layout */
 #body {
@@ -143,12 +143,12 @@
 
 .aboutTitleUnderLine {
   display: block;
-  width: 50px;
+  width: 60px;
   height: 1px;
   margin: 0 auto;
   padding-bottom: 20px;
   border: 0;
-  border-top: 2px solid #7b6c63;
+  border-top: 3px solid #7b6c63;
 }
 
 .aboutText {
@@ -195,3 +195,91 @@
   font-size: 12px;
   color: #4d4d4d;
 }
+/* media screen all */
+
+
+@media screen and (min-width: 1041px) and (max-width: 1120px) {
+.layoutInner {
+  margin: 0 auto;
+  max-width: 960px;
+}
+}
+/* media screen 1041〜1120 */
+
+@media screen and (min-width: 961px) and (max-width: 1040px) {
+.layoutInner {
+  margin: 0 auto;
+  max-width: 880px;
+}
+
+.visual {
+  width: 100%;
+  height: 350px;
+  background-image: url(images/bg.png);
+  background-position: 0 -50px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.visualInner {
+  padding-top: 80px;
+}
+
+}
+/* media screen 961〜1040 */
+
+
+@media screen and (min-width: 768px) and (max-width: 960px) {
+.layoutInner {
+  margin: 0 auto;
+  max-width: 720px;
+}
+
+.visual {
+  width: 100%;
+  height: 300px;
+  background-image: url(images/bg.png);
+  background-position: 0 -50px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.visualInner {
+  padding-top: 60px;
+}
+
+.visualTitle {
+  margin: 5px 0 10px 0;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 1.2em;
+  letter-spacing: 0.08em;
+}
+
+.visualContact {
+  display: block;
+  width: 150px;
+  padding: 10px 0px;
+  text-align: center;
+  background-color: rgba(200,200,200,0.2);
+}
+
+.visualContactText {
+  font-size: 14px;
+  color: #FFF;
+}
+
+} /* media screen 768〜960 */
+
+
+@media screen and (min-width: 481px) and (max-width: 767px) {
+
+
+}
+
+@media screen and (max-width: 480px) {
+
+
+}
+
+
