--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 .layoutInner {
   margin: 0 auto;
   max-width: 1040px;
+  width: 70%;
 }
 
 /* layout */
@@ -97,7 +98,7 @@
 }
 
 .visualTitle {
-  margin: 5px 0 30px 0;
+  margin: 5px 0 20px 0;
   font-size: 40px;
   font-weight: 400;
   line-height: 1.2em;
@@ -198,20 +199,7 @@
 /* media screen all */
 
 
-@media screen and (min-width: 1041px) and (max-width: 1120px) {
-.layoutInner {
-  margin: 0 auto;
-  max-width: 960px;
-}
-}
-/* media screen 1041〜1120 */
-
 @media screen and (min-width: 961px) and (max-width: 1040px) {
-.layoutInner {
-  margin: 0 auto;
-  max-width: 880px;
-}
-
 .visual {
   width: 100%;
   height: 350px;
@@ -233,6 +221,7 @@
 .layoutInner {
   margin: 0 auto;
   max-width: 720px;
+  width: 85%;
 }
 
 .visual {
@@ -269,17 +258,45 @@
   color: #FFF;
 }
 
-} /* media screen 768〜960 */
+}
+/* media screen 768〜960 */
 
 
-@media screen and (min-width: 481px) and (max-width: 767px) {
+/*@media screen and (min-width: 481px) and (max-width: 767px) {
+
+
+}*/
+/* media screen 481〜767 */
+
+@media screen and (max-width: 767px) {
+.menu {
+  display: none;
+}
+
+.headerInner {
+  position: relative;
+}
+
+.toggle{
+  display: block;
+  width: 30px;
+  height: 30px;
+  background: #000;
+  position: absolute;
+  top: 10px;
+  right: 0;
+}
+
+.toggleBar {
+  display: block;
+  width: 30px;
+  height: 0;
+  margin-top: 5px;
+  border: 0;
+  border-bottom: solid 3px #FFF;
+}
 
 
 }
-
-@media screen and (max-width: 480px) {
-
-
-}
-
+/* media screen 〜480 */
 
