--- a/style.css
+++ b/style.css
@@ -1,11 +1,8 @@
-
-
-
 /* common */
 .layoutInner {
   margin: 0 auto;
   max-width: 1040px;
-  width: 70%;
+  width: 80%;
 }
 
 /* layout */
@@ -19,12 +16,14 @@
 
 #header {
   width: 100%;
-  height: 50px;
+  height: auto;
   background-color: #000;
 }
 
 .headerInner {
+  height: 35px;
   padding-top: 15px;
+  position: relative;
 }
 
 #content {
@@ -50,27 +49,30 @@
 /* parts */
 .headerLogo {
   float: left;
-  width: 50%;
   font-size: 24px;
   color: #FFF;
   font-weight: 400;
   letter-spacing: 0.08em;
 }
 
+.nav {
+
+}
+
 .menu {
-  display: table;
-  table-layout: auto;
-  width: 50%;
+  display: none;
+  margin-top: 35px;
 }
 
 .menuList {
-  display: table-cell;
-  vertical-align: middle;
   text-align: center;
+  background-color: #000;
+  height: 35px;
+  padding-top: 15px;
 }
 
 .menuInner {
-  font-size: 12px;
+  font-size: 16px;
   color: #FFF;
   font-weight: 300;
 }
@@ -78,6 +80,25 @@
 .menuInner:hover {
   border-bottom: 3px solid #7b6c63;
   padding-bottom: 4px;
+}
+
+.toggle{
+  display: block;
+  width: 30px;
+  height: 30px;
+  background: #000;
+  position: absolute;
+  top: 10px;
+  right: 0;
+}
+
+.toggleBar {
+  display: block;
+  width: 30px;
+  height: 0;
+  margin-top: 5px;
+  border: 0;
+  border-bottom: solid 3px #FFF;
 }
 
 .visual {
@@ -196,107 +217,3 @@
   font-size: 12px;
   color: #4d4d4d;
 }
-/* media screen all */
-
-
-@media screen and (min-width: 961px) and (max-width: 1040px) {
-.visual {
-  width: 100%;
-  height: 350px;
-  background-image: url(images/bg.png);
-  background-position: 0 -50px;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.visualInner {
-  padding-top: 80px;
-}
-
-}
-/* media screen 961〜1040 */
-
-
-@media screen and (min-width: 768px) and (max-width: 960px) {
-.layoutInner {
-  margin: 0 auto;
-  max-width: 720px;
-  width: 85%;
-}
-
-.visual {
-  width: 100%;
-  height: 300px;
-  background-image: url(images/bg.png);
-  background-position: 0 -50px;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.visualInner {
-  padding-top: 60px;
-}
-
-.visualTitle {
-  margin: 5px 0 10px 0;
-  font-size: 30px;
-  font-weight: 400;
-  line-height: 1.2em;
-  letter-spacing: 0.08em;
-}
-
-.visualContact {
-  display: block;
-  width: 150px;
-  padding: 10px 0px;
-  text-align: center;
-  background-color: rgba(200,200,200,0.2);
-}
-
-.visualContactText {
-  font-size: 14px;
-  color: #FFF;
-}
-
-}
-/* media screen 768〜960 */
-
-
-/*@media screen and (min-width: 481px) and (max-width: 767px) {
-
-
-}*/
-/* media screen 481〜767 */
-
-@media screen and (max-width: 767px) {
-.menu {
-  display: none;
-}
-
-.headerInner {
-  position: relative;
-}
-
-.toggle{
-  display: block;
-  width: 30px;
-  height: 30px;
-  background: #000;
-  position: absolute;
-  top: 10px;
-  right: 0;
-}
-
-.toggleBar {
-  display: block;
-  width: 30px;
-  height: 0;
-  margin-top: 5px;
-  border: 0;
-  border-bottom: solid 3px #FFF;
-}
-
-
-}
-/* media screen 〜480 */
-
