--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* common */
+/*======= common ========*/
 #body {
   width:100%;
   height: 100%;
@@ -41,17 +41,21 @@
 
 /* layout */
 .body {
+  position: relative;
   font-size: 16px;
+  line-height:1.2em;
 }
+
+/*@media screen and (min-width: 481px;) and (max-width: 768px;) {*/
+@media screen and (max-width: 767px) {
 
 .layoutInner {
   margin: 0 auto;
   max-width: 1040px;
   width: 90%;
 }
-
-
 /*============ parts ==========*/
+
 /* header */
 .headerLogo {
   float: left;
@@ -122,6 +126,7 @@
 }
 
 .visualText {
+  text-align: center;
   padding-top: 100px;
   color: #FFF;
 }
@@ -132,7 +137,7 @@
 
 .visualTitle {
   margin-bottom: 50px;
-  font-size: 28px;
+  font-size: 26px;
   font-weight: 300;
   line-height: 1.2em;
   letter-spacing: 0.08em;
@@ -221,6 +226,7 @@
   line-height: 1.5em;
 }
 
+/* footer */
 .copyright {
   text-align: center;
 }
@@ -229,3 +235,180 @@
   font-size: 12px;
   color: #4d4d4d;
 }
+}
+
+
+
+@media screen and (min-width: 768px) {
+
+@media screen and (min-width: 768px) and (max-width: 960px) {
+.layoutInner {
+  margin: 0 auto;
+  max-width: 1040px;
+  width: 80%;
+}
+}
+@media screen and (min-width: 961px) {
+.layoutInner {
+  margin: 0 auto;
+  max-width: 1040px;
+  width: 70%;
+}
+}
+
+.headerLogo {
+  float: left;
+  padding-top: 15px;
+  font-size: 24px;
+  color: #FFF;
+  font-weight: 400;
+  letter-spacing: 0.08em;
+}
+
+.nav {
+  float: right;
+  padding-top: 15px;
+}
+
+.menu {
+  display: table;
+  table-layout: auto;
+}
+
+.menuList {
+  display: table-cell;
+  vertical-align: baseline;
+  text-align: right;
+  padding-left: 20px;
+}
+
+.menuInner {
+  font-size: 14px;
+  color: #FFF;
+  font-weight: 300;
+}
+
+.menuInner:hover {
+  border-bottom: 3px solid #7b6c63;
+  padding-bottom: 4px;
+}
+
+.visual {
+  width: 100%;
+  height: auto;
+  background-image: url(images/bg.png);
+  background-position: left top;
+  background-size: 100% 150%;
+  background-repeat: no-repeat;
+}
+
+.visualInner {
+  height: 450px;
+}
+
+.visualText {
+  padding-top: 100px;
+  color: #FFF;
+}
+
+.visualTitle {
+  margin: 5px 0 30px 0;
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 1.2em;
+  letter-spacing: 0.08em;
+}
+
+.visualTitleColor {
+  color: #7b6c63;
+}
+
+.visualContact {
+  display: block;
+  width: 200px;
+  padding: 15px 0px;
+  text-align: center;
+  background-color: rgba(200,200,200,0.2);
+}
+
+.visualContact:hover {
+  background-color: rgba(200,200,200,0.4);
+}
+
+.visualContactText {
+  color: #FFF;
+}
+
+.about {
+  width: 100%;
+  height: auto;
+}
+
+.aboutInner {
+  width: 400px;
+  margin: 0 auto 30px auto;
+  text-align: center;
+}
+
+.aboutTitle {
+  padding-bottom: 20px;
+  font-size: 30px;
+  color: #7b6c63;
+  font-weight: 400;
+  letter-spacing: 0.09em;
+}
+
+.aboutTitleUnderLine {
+  display: block;
+  width: 60px;
+  height: 1px;
+  margin: 0 auto;
+  padding-bottom: 20px;
+  border: 0;
+  border-top: 3px solid #7b6c63;
+}
+
+.aboutText {
+  color: #000;
+  line-height: 1.6em;
+}
+
+.business {
+  display: table;
+  table-layout: fixed;
+  width: 100%;
+}
+
+.businessInner {
+  display: table-cell;
+  vertical-align: baseline;
+  text-align: center;
+  padding-left: 20px;
+}
+
+.businessInner:first-child {
+  padding-left: 0;
+}
+
+.businessInnerTitle {
+  padding: 10px 0;
+  font-weight: 300;
+  letter-spacing: 0.08em;
+}
+
+.businessInnerText {
+  font-size: 13px;
+  color: #949494;
+  line-height: 1.6em;
+}
+
+.copyright {
+  text-align: center;
+}
+
+.smallFont {
+  font-size: 12px;
+  color: #4d4d4d;
+}
+}
+/* media screen 1041〜 */
