--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 /*======= common ========*/
 #body {
+  position: relative;
   width:100%;
   height: 100%;
+  font-size: 16px;
   color: #000;
+  line-height:1.2em;
   font-family: "Helvetica Neue", Helvetica, Arial, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
 }
 
@@ -37,16 +40,8 @@
   padding-top: 10px;
 }
 
+/*============ Device ==========*/
 
-
-/* layout */
-.body {
-  position: relative;
-  font-size: 16px;
-  line-height:1.2em;
-}
-
-/*@media screen and (min-width: 481px;) and (max-width: 768px;) {*/
 @media screen and (max-width: 767px) {
 
 .layoutInner {
@@ -54,7 +49,7 @@
   max-width: 1040px;
   width: 90%;
 }
-/*============ parts ==========*/
+
 
 /* header */
 .headerLogo {
@@ -248,6 +243,7 @@
   width: 80%;
 }
 }
+
 @media screen and (min-width: 961px) {
 .layoutInner {
   margin: 0 auto;
@@ -277,7 +273,7 @@
 
 .menuList {
   display: table-cell;
-  vertical-align: baseline;
+  vertical-align: top;
   text-align: right;
   padding-left: 20px;
 }
@@ -297,7 +293,7 @@
   width: 100%;
   height: auto;
   background-image: url(images/bg.png);
-  background-position: left top;
+  background-position: 0 30%;
   background-size: 100% 150%;
   background-repeat: no-repeat;
 }
@@ -381,7 +377,7 @@
 
 .businessInner {
   display: table-cell;
-  vertical-align: baseline;
+  vertical-align: top;
   text-align: center;
   padding-left: 20px;
 }
@@ -411,4 +407,3 @@
   color: #4d4d4d;
 }
 }
-/* media screen 1041〜 */
