--- a/style.css
+++ b/style.css
@@ -41,15 +41,14 @@
 }
 
 /*============ Device ==========*/
-
-@media screen and (max-width: 767px) {
+/*===== Mobile Size =====*/
+@media screen and (max-width: 480px) {
 
 .layoutInner {
   margin: 0 auto;
   max-width: 1040px;
   width: 90%;
 }
-
 
 /* header */
 .headerLogo {
@@ -206,7 +205,7 @@
 
 .businessInnerImg {
   width: 20px;
-  height: auto;
+  height: 20px;
 }
 
 .businessInnerTitle {
@@ -233,25 +232,15 @@
 }
 
 
-
-@media screen and (min-width: 768px) {
-
-@media screen and (min-width: 768px) and (max-width: 960px) {
+/*==== Middle Size ====*/
+@media screen and (min-width: 481px) and (max-width: 767px) {
 .layoutInner {
   margin: 0 auto;
-  max-width: 1040px;
-  width: 80%;
-}
+  width: 90%;
 }
 
-@media screen and (min-width: 961px) {
-.layoutInner {
-  margin: 0 auto;
-  max-width: 1040px;
-  width: 70%;
-}
-}
-
+/* header */
+/* header */
 .headerLogo {
   float: left;
   padding-top: 15px;
@@ -261,25 +250,23 @@
   letter-spacing: 0.08em;
 }
 
-.nav {
-  float: right;
-  padding-top: 15px;
-}
-
 .menu {
-  display: table;
-  table-layout: auto;
+  display: none;
+  width: 100%;
+  position: absolute;
+  top: 50px;
+  left: 0;
 }
 
 .menuList {
-  display: table-cell;
-  vertical-align: top;
-  text-align: right;
-  padding-left: 20px;
+  text-align: center;
+  background-color: #000;
+  height: 35px;
+  padding-top: 15px;
 }
 
 .menuInner {
-  font-size: 14px;
+  font-size: 16px;
   color: #FFF;
   font-weight: 300;
 }
@@ -289,6 +276,26 @@
   padding-bottom: 4px;
 }
 
+.toggle{
+  display: block;
+  width: 30px;
+  height: 30px;
+  background: #000;
+  position: absolute;
+  top: 15px;
+  right: 0;
+}
+
+.toggleBar {
+  display: block;
+  width: 30px;
+  height: 0;
+  margin-bottom: 5px;
+  border: 0;
+  border-bottom: solid 3px #FFF;
+}
+
+/* visual */
 .visual {
   width: 100%;
   height: auto;
@@ -335,6 +342,7 @@
   color: #FFF;
 }
 
+/* content */
 .about {
   width: 100%;
   height: auto;
@@ -386,6 +394,11 @@
   padding-left: 0;
 }
 
+.businessInnerImg {
+  width: 30px;
+  height: 30px;
+}
+
 .businessInnerTitle {
   padding: 10px 0;
   font-weight: 300;
@@ -398,6 +411,191 @@
   line-height: 1.6em;
 }
 
+/* footer */
+.copyright {
+  text-align: center;
+}
+
+.smallFont {
+  font-size: 12px;
+  color: #4d4d4d;
+}
+}
+
+
+/* PC Size  */
+@media screen and (min-width: 768px) {
+
+@media screen and (min-width: 768px) and (max-width: 960px) {
+.layoutInner {
+  margin: 0 auto;
+  width: 85%;
+}
+}
+
+@media screen and (min-width: 961px) {
+.layoutInner {
+  margin: 0 auto;
+  max-width: 1040px;
+  width: 70%;
+}
+}
+
+/* header */
+.headerLogo {
+  float: left;
+  padding-top: 15px;
+  font-size: 24px;
+  color: #FFF;
+  font-weight: 400;
+  letter-spacing: 0.08em;
+}
+
+.nav {
+  float: right;
+  padding-top: 15px;
+}
+
+.menu {
+  display: table;
+  table-layout: auto;
+}
+
+.menuList {
+  display: table-cell;
+  vertical-align: top;
+  text-align: right;
+  padding-left: 20px;
+}
+
+.menuInner {
+  font-size: 14px;
+  color: #FFF;
+  font-weight: 300;
+}
+
+.menuInner:hover {
+  border-bottom: 3px solid #7b6c63;
+  padding-bottom: 4px;
+}
+
+/* visual */
+.visual {
+  width: 100%;
+  height: auto;
+  background-image: url(images/bg.png);
+  background-position: 0 30%;
+  background-size: 100% 150%;
+  background-repeat: no-repeat;
+}
+
+.visualInner {
+  height: 450px;
+}
+
+.visualText {
+  padding-top: 100px;
+  color: #FFF;
+}
+
+.visualTitle {
+  margin: 5px 0 30px 0;
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 1.2em;
+  letter-spacing: 0.08em;
+}
+
+.visualTitleColor {
+  color: #7b6c63;
+}
+
+.visualContact {
+  display: block;
+  width: 200px;
+  padding: 15px 0px;
+  text-align: center;
+  background-color: rgba(200,200,200,0.2);
+}
+
+.visualContact:hover {
+  background-color: rgba(200,200,200,0.4);
+}
+
+.visualContactText {
+  color: #FFF;
+}
+
+/* content */
+.about {
+  width: 100%;
+  height: auto;
+}
+
+.aboutInner {
+  width: 400px;
+  margin: 0 auto 30px auto;
+  text-align: center;
+}
+
+.aboutTitle {
+  padding-bottom: 20px;
+  font-size: 30px;
+  color: #7b6c63;
+  font-weight: 400;
+  letter-spacing: 0.09em;
+}
+
+.aboutTitleUnderLine {
+  display: block;
+  width: 60px;
+  height: 1px;
+  margin: 0 auto;
+  padding-bottom: 20px;
+  border: 0;
+  border-top: 3px solid #7b6c63;
+}
+
+.aboutText {
+  color: #000;
+  line-height: 1.6em;
+}
+
+.business {
+  display: table;
+  table-layout: fixed;
+  width: 100%;
+}
+
+.businessInner {
+  display: table-cell;
+  vertical-align: top;
+  text-align: center;
+  padding-left: 20px;
+}
+
+.businessInner:first-child {
+  padding-left: 0;
+}
+
+.businessInnerImg {
+  width: 30px;
+  height: 30px;
+}
+
+.businessInnerTitle {
+  padding: 10px 0;
+  font-weight: 300;
+  letter-spacing: 0.08em;
+}
+
+.businessInnerText {
+  font-size: 13px;
+  color: #949494;
+  line-height: 1.6em;
+}
+
+/* footer */
 .copyright {
   text-align: center;
 }
