--- a/style.css
+++ b/style.css
@@ -1,41 +1,27 @@
 /*======= common ========*/
 #body {
   position: relative;
-  width:100%;
-  height: 100%;
   font-size: 16px;
   color: #000;
-  line-height:1.2em;
-  font-family: "Helvetica Neue", Helvetica, Arial, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+  line-height: 1.2em;
 }
 
 #header {
-  width: 100%;
-  height: auto;
   background-color: #000;
 }
-
-.headerInner {
+#header .headerInner {
   height: 50px;
   position: relative;
 }
 
-#content {
-  width: 100%;
-  height: auto;
-}
-
-.contentInner {
+#content .contentInner {
   padding: 50px 0;
 }
 
 #footer {
-  width: 100%;
-  height: auto;
   background-color: #000;
 }
-
-.footerInner {
+#footer .footerInner {
   height: 30px;
   padding-top: 10px;
 }
@@ -43,565 +29,498 @@
 /*============ Device ==========*/
 /*===== Mobile Size =====*/
 @media screen and (max-width: 480px) {
+  .layoutInner {
+    margin: 0 auto;
+    max-width: 1040px;
+    width: 90%;
+  }
 
-.layoutInner {
-  margin: 0 auto;
-  max-width: 1040px;
-  width: 90%;
+  /* header */
+  .headerLogo {
+    float: left;
+    padding-top: 15px;
+    font-size: 24px;
+    color: #FFF;
+    font-weight: 400;
+    letter-spacing: 0.08em;
+  }
+
+  /* menu */
+  .toggle {
+    display: block;
+    width: 30px;
+    height: 30px;
+    background: #000;
+    position: absolute;
+    top: 15px;
+    right: 0;
+  }
+  .toggle .toggleBar {
+    display: block;
+    width: 30px;
+    height: 0;
+    margin-bottom: 5px;
+    border: 0;
+    border-bottom: solid 3px #FFF;
+  }
+
+  .menu {
+    display: none;
+    width: 100%;
+    position: absolute;
+    top: 50px;
+    left: 0;
+  }
+  .menu .menuList {
+    text-align: center;
+    background-color: #000;
+    height: 35px;
+    padding-top: 15px;
+  }
+  .menu .menuList .menuInner {
+    font-size: 16px;
+    color: #FFF;
+    font-weight: 300;
+  }
+  .menu .menuList .menuInner:hover {
+    border-bottom: 3px solid #7b6c63;
+    padding-bottom: 4px;
+  }
+
+  /* visual */
+  .visual {
+    width: 100%;
+    height: auto;
+    background-image: url(images/bg.png);
+    background-position: left top;
+    background-size: 100% 150%;
+    background-repeat: no-repeat;
+  }
+  .visual .visualInner {
+    height: 350px;
+  }
+  .visual .visualInner .visualText {
+    text-align: center;
+    padding-top: 100px;
+    color: #FFF;
+  }
+  .visual .visualInner .visualText .visualSubTitle {
+    display: none;
+  }
+  .visual .visualInner .visualText .visualTitle {
+    margin-bottom: 50px;
+    font-size: 26px;
+    font-weight: 300;
+    line-height: 1.2em;
+    letter-spacing: 0.08em;
+  }
+  .visual .visualInner .visualText .visualTitle .visualTitleColor {
+    color: #7b6c63;
+  }
+  .visual .visualInner .visualText .visualContact {
+    display: block;
+    width: 200px;
+    height: 50px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: rgba(200, 200, 200, 0.2);
+  }
+  .visual .visualInner .visualText .visualContact .visualContactText {
+    display: block;
+    padding-top: 15px;
+    color: #FFF;
+  }
+  .visual .visualInner .visualText .visualContact:hover {
+    background-color: rgba(200, 200, 200, 0.4);
+  }
+
+  /* content */
+  .about {
+    width: 100%;
+    height: auto;
+  }
+  .about .aboutInner {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  .about .aboutInner .aboutTitle {
+    padding-bottom: 20px;
+    font-size: 24px;
+    color: #7b6c63;
+    font-weight: 400;
+    letter-spacing: 0.1em;
+  }
+  .about .aboutInner .aboutTitleUnderLine {
+    display: block;
+    width: 40px;
+    height: 1px;
+    margin: 0 auto;
+    padding-bottom: 20px;
+    border: 0;
+    border-top: 3px solid #7b6c63;
+  }
+  .about .aboutInner .aboutText {
+    color: #000;
+    line-height: 1.4em;
+  }
+
+  .business {
+    text-align: center;
+  }
+  .business .businessInner {
+    margin-bottom: 30px;
+  }
+  .business .businessInner .businessInnerImg {
+    width: 20px;
+    height: 20px;
+  }
+  .business .businessInner .businessInnerTitle {
+    padding: 10px 0;
+    font-weight: 300;
+    letter-spacing: 0.08em;
+  }
+  .business .businessInner .businessInnerText {
+    font-size: 14px;
+    color: #949494;
+    line-height: 1.5em;
+  }
+  .business .businessInner:last-child {
+    margin-bottom: 0;
+  }
+
+  /* footer */
+  .copyright {
+    text-align: center;
+  }
+  .copyright .smallFont {
+    font-size: 12px;
+    color: #4d4d4d;
+  }
 }
-
-/* header */
-.headerLogo {
-  float: left;
-  padding-top: 15px;
-  font-size: 24px;
-  color: #FFF;
-  font-weight: 400;
-  letter-spacing: 0.08em;
-}
-
-.menu {
-  display: none;
-  width: 100%;
-  position: absolute;
-  top: 50px;
-  left: 0;
-}
-
-.menuList {
-  text-align: center;
-  background-color: #000;
-  height: 35px;
-  padding-top: 15px;
-}
-
-.menuInner {
-  font-size: 16px;
-  color: #FFF;
-  font-weight: 300;
-}
-
-.menuInner:hover {
-  border-bottom: 3px solid #7b6c63;
-  padding-bottom: 4px;
-}
-
-.toggle{
-  display: block;
-  width: 30px;
-  height: 30px;
-  background: #000;
-  position: absolute;
-  top: 15px;
-  right: 0;
-}
-
-.toggleBar {
-  display: block;
-  width: 30px;
-  height: 0;
-  margin-bottom: 5px;
-  border: 0;
-  border-bottom: solid 3px #FFF;
-}
-
-/* visual */
-.visual {
-  width: 100%;
-  height: auto;
-  background-image: url(images/bg.png);
-  background-position: left top;
-  background-size: 100% 150%;
-  background-repeat: no-repeat;
-}
-
-.visualInner {
-  height: 350px;
-}
-
-.visualText {
-  text-align: center;
-  padding-top: 100px;
-  color: #FFF;
-}
-
-.visualSubTitle {
-  display: none;
-}
-
-.visualTitle {
-  margin-bottom: 50px;
-  font-size: 26px;
-  font-weight: 300;
-  line-height: 1.2em;
-  letter-spacing: 0.08em;
-}
-
-.visualTitleColor {
-  color: #7b6c63;
-}
-
-.visualContact {
-  display: block;
-  width: 200px;
-  height: 50px;
-  margin: 0 auto;
-  text-align: center;
-  background-color: rgba(200,200,200,0.2);
-}
-
-.visualContact:hover {
-  background-color: rgba(200,200,200,0.4);
-}
-
-.visualContactText {
-  display: block;
-  padding-top: 15px;
-  color: #FFF;
-}
-
-.about {
-}
-
-.aboutInner {
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-.aboutTitle {
-  padding-bottom: 20px;
-  font-size: 24px;
-  color: #7b6c63;
-  font-weight: 400;
-  letter-spacing: 0.1em;
-}
-
-.aboutTitleUnderLine {
-  display: block;
-  width: 40px;
-  height: 1px;
-  margin: 0 auto;
-  padding-bottom: 20px;
-  border: 0;
-  border-top: 3px solid #7b6c63;
-}
-
-.aboutText {
-  color: #000;
-  line-height: 1.4em;
-}
-
-.business {
-  text-align: center;
-}
-
-.businessInner {
-  margin-bottom: 30px;
-}
-
-.businessInner:last-child {
-  margin-bottom: 0;
-}
-
-.businessInnerImg {
-  width: 20px;
-  height: 20px;
-}
-
-.businessInnerTitle {
-  padding: 10px 0;
-  font-weight: 300;
-  letter-spacing: 0.08em;
-}
-
-.businessInnerText {
-  font-size: 14px;
-  color: #949494;
-  line-height: 1.5em;
-}
-
-/* footer */
-.copyright {
-  text-align: center;
-}
-
-.smallFont {
-  font-size: 12px;
-  color: #4d4d4d;
-}
-}
-
-
 /*==== Middle Size ====*/
 @media screen and (min-width: 481px) and (max-width: 767px) {
-.layoutInner {
-  margin: 0 auto;
-  width: 90%;
-}
+  .layoutInner {
+    margin: 0 auto;
+    width: 90%;
+  }
 
-/* header */
-/* header */
-.headerLogo {
-  float: left;
-  padding-top: 15px;
-  font-size: 24px;
-  color: #FFF;
-  font-weight: 400;
-  letter-spacing: 0.08em;
-}
+  /* header */
+  .headerLogo {
+    float: left;
+    padding-top: 15px;
+    font-size: 24px;
+    color: #FFF;
+    font-weight: 400;
+    letter-spacing: 0.08em;
+  }
 
-.menu {
-  display: none;
-  width: 100%;
-  position: absolute;
-  top: 50px;
-  left: 0;
-}
+  /* menu */
+  .toggle {
+    display: block;
+    width: 30px;
+    height: 30px;
+    background: #000;
+    position: absolute;
+    top: 15px;
+    right: 0;
+  }
+  .toggle .toggleBar {
+    display: block;
+    width: 30px;
+    height: 0;
+    margin-bottom: 5px;
+    border: 0;
+    border-bottom: solid 3px #FFF;
+  }
 
-.menuList {
-  text-align: center;
-  background-color: #000;
-  height: 35px;
-  padding-top: 15px;
-}
+  .menu {
+    display: none;
+    width: 100%;
+    position: absolute;
+    top: 50px;
+    left: 0;
+  }
+  .menu .menuList {
+    text-align: center;
+    background-color: #000;
+    height: 35px;
+    padding-top: 15px;
+  }
+  .menu .menuList .menuInner {
+    font-size: 16px;
+    color: #FFF;
+    font-weight: 300;
+  }
+  .menu .menuList .menuInner:hover {
+    border-bottom: 3px solid #7b6c63;
+    padding-bottom: 4px;
+  }
 
-.menuInner {
-  font-size: 16px;
-  color: #FFF;
-  font-weight: 300;
-}
+  /* visual */
+  .visual {
+    width: 100%;
+    height: auto;
+    background-image: url(images/bg.png);
+    background-position: 0 30%;
+    background-size: 100% 150%;
+    background-repeat: no-repeat;
+  }
+  .visual .visualInner {
+    height: 450px;
+  }
+  .visual .visualInner .visualText {
+    padding-top: 100px;
+    color: #FFF;
+  }
+  .visual .visualInner .visualText .visualTitle {
+    margin: 5px 0 30px 0;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 1.2em;
+    letter-spacing: 0.08em;
+  }
+  .visual .visualInner .visualText .visualTitle .visualTitleColor {
+    color: #7b6c63;
+  }
+  .visual .visualInner .visualText .visualContact {
+    display: block;
+    width: 200px;
+    padding: 15px 0px;
+    text-align: center;
+    background-color: rgba(200, 200, 200, 0.2);
+  }
+  .visual .visualInner .visualText .visualContact .visualContactText {
+    color: #FFF;
+  }
+  .visual .visualInner .visualText .visualContact:hover {
+    background-color: rgba(200, 200, 200, 0.4);
+  }
 
-.menuInner:hover {
-  border-bottom: 3px solid #7b6c63;
-  padding-bottom: 4px;
-}
+  /* content */
+  .about {
+    width: 100%;
+    height: auto;
+  }
+  .about .aboutInner {
+    width: 400px;
+    margin: 0 auto 30px auto;
+    text-align: center;
+  }
+  .about .aboutInner .aboutTitle {
+    padding-bottom: 20px;
+    font-size: 30px;
+    color: #7b6c63;
+    font-weight: 400;
+    letter-spacing: 0.09em;
+  }
+  .about .aboutInner .aboutTitleUnderLine {
+    display: block;
+    width: 60px;
+    height: 1px;
+    margin: 0 auto;
+    padding-bottom: 20px;
+    border: 0;
+    border-top: 3px solid #7b6c63;
+  }
+  .about .aboutInner .aboutText {
+    color: #000;
+    line-height: 1.6em;
+  }
 
-.toggle{
-  display: block;
-  width: 30px;
-  height: 30px;
-  background: #000;
-  position: absolute;
-  top: 15px;
-  right: 0;
-}
+  .business {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+  }
+  .business .businessInner {
+    display: table-cell;
+    vertical-align: top;
+    text-align: center;
+    padding-left: 20px;
+  }
+  .business .businessInner .businessInnerImg {
+    width: 30px;
+    height: 30px;
+  }
+  .business .businessInner .businessInnerTitle {
+    padding: 10px 0;
+    font-weight: 300;
+    letter-spacing: 0.08em;
+  }
+  .business .businessInner .businessInnerText {
+    font-size: 13px;
+    color: #949494;
+    line-height: 1.6em;
+  }
+  .business .businessInner:first-child {
+    padding-left: 0;
+  }
 
-.toggleBar {
-  display: block;
-  width: 30px;
-  height: 0;
-  margin-bottom: 5px;
-  border: 0;
-  border-bottom: solid 3px #FFF;
+  /* footer */
+  .copyright {
+    text-align: center;
+  }
+  .copyright .smallFont {
+    font-size: 12px;
+    color: #4d4d4d;
+  }
 }
-
-/* visual */
-.visual {
-  width: 100%;
-  height: auto;
-  background-image: url(images/bg.png);
-  background-position: 0 30%;
-  background-size: 100% 150%;
-  background-repeat: no-repeat;
-}
-
-.visualInner {
-  height: 450px;
-}
-
-.visualText {
-  padding-top: 100px;
-  color: #FFF;
-}
-
-.visualTitle {
-  margin: 5px 0 30px 0;
-  font-size: 40px;
-  font-weight: 400;
-  line-height: 1.2em;
-  letter-spacing: 0.08em;
-}
-
-.visualTitleColor {
-  color: #7b6c63;
-}
-
-.visualContact {
-  display: block;
-  width: 200px;
-  padding: 15px 0px;
-  text-align: center;
-  background-color: rgba(200,200,200,0.2);
-}
-
-.visualContact:hover {
-  background-color: rgba(200,200,200,0.4);
-}
-
-.visualContactText {
-  color: #FFF;
-}
-
-/* content */
-.about {
-  width: 100%;
-  height: auto;
-}
-
-.aboutInner {
-  width: 400px;
-  margin: 0 auto 30px auto;
-  text-align: center;
-}
-
-.aboutTitle {
-  padding-bottom: 20px;
-  font-size: 30px;
-  color: #7b6c63;
-  font-weight: 400;
-  letter-spacing: 0.09em;
-}
-
-.aboutTitleUnderLine {
-  display: block;
-  width: 60px;
-  height: 1px;
-  margin: 0 auto;
-  padding-bottom: 20px;
-  border: 0;
-  border-top: 3px solid #7b6c63;
-}
-
-.aboutText {
-  color: #000;
-  line-height: 1.6em;
-}
-
-.business {
-  display: table;
-  table-layout: fixed;
-  width: 100%;
-}
-
-.businessInner {
-  display: table-cell;
-  vertical-align: top;
-  text-align: center;
-  padding-left: 20px;
-}
-
-.businessInner:first-child {
-  padding-left: 0;
-}
-
-.businessInnerImg {
-  width: 30px;
-  height: 30px;
-}
-
-.businessInnerTitle {
-  padding: 10px 0;
-  font-weight: 300;
-  letter-spacing: 0.08em;
-}
-
-.businessInnerText {
-  font-size: 13px;
-  color: #949494;
-  line-height: 1.6em;
-}
-
-/* footer */
-.copyright {
-  text-align: center;
-}
-
-.smallFont {
-  font-size: 12px;
-  color: #4d4d4d;
-}
-}
-
-
 /* PC Size  */
+@media screen and (min-width: 768px) and (min-width: 768px) and (max-width: 960px) {
+  .layoutInner {
+    margin: 0 auto;
+    width: 85%;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 961px) {
+  .layoutInner {
+    margin: 0 auto;
+    max-width: 1040px;
+    width: 70%;
+  }
+}
 @media screen and (min-width: 768px) {
+  /* header */
+  .headerLogo {
+    float: left;
+    padding-top: 15px;
+    font-size: 24px;
+    color: #FFF;
+    font-weight: 400;
+    letter-spacing: 0.08em;
+  }
 
-@media screen and (min-width: 768px) and (max-width: 960px) {
-.layoutInner {
-  margin: 0 auto;
-  width: 85%;
-}
-}
+  /* menu */
+  .nav {
+    float: right;
+    padding-top: 15px;
+  }
+  .nav .menu {
+    display: table;
+    table-layout: auto;
+  }
+  .nav .menu .menuList {
+    display: table-cell;
+    vertical-align: top;
+    text-align: right;
+    padding-left: 20px;
+  }
+  .nav .menu .menuList .menuInner {
+    font-size: 14px;
+    color: #FFF;
+    font-weight: 300;
+  }
+  .nav .menu .menuList .menuInner:hover {
+    border-bottom: 3px solid #7b6c63;
+    padding-bottom: 4px;
+  }
 
-@media screen and (min-width: 961px) {
-.layoutInner {
-  margin: 0 auto;
-  max-width: 1040px;
-  width: 70%;
-}
-}
+  /* visual */
+  .visual {
+    width: 100%;
+    height: auto;
+    background-image: url(images/bg.png);
+    background-position: 0 30%;
+    background-size: 100% 150%;
+    background-repeat: no-repeat;
+  }
+  .visual .visualInner {
+    height: 450px;
+  }
+  .visual .visualInner .visualText {
+    padding-top: 100px;
+    color: #FFF;
+  }
+  .visual .visualInner .visualText .visualTitle {
+    margin: 5px 0 30px 0;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 1.2em;
+    letter-spacing: 0.08em;
+  }
+  .visual .visualInner .visualText .visualTitle .visualTitleColor {
+    color: #7b6c63;
+  }
+  .visual .visualInner .visualText .visualContact {
+    display: block;
+    width: 200px;
+    padding: 15px 0px;
+    text-align: center;
+    background-color: rgba(200, 200, 200, 0.2);
+  }
+  .visual .visualInner .visualText .visualContact .visualContactText {
+    color: #FFF;
+  }
+  .visual .visualInner .visualText .visualContact:hover {
+    background-color: rgba(200, 200, 200, 0.4);
+  }
 
-/* header */
-.headerLogo {
-  float: left;
-  padding-top: 15px;
-  font-size: 24px;
-  color: #FFF;
-  font-weight: 400;
-  letter-spacing: 0.08em;
-}
+  /* content */
+  .about {
+    width: 100%;
+    height: auto;
+  }
+  .about .aboutInner {
+    width: 400px;
+    margin: 0 auto 30px auto;
+    text-align: center;
+  }
+  .about .aboutInner .aboutTitle {
+    padding-bottom: 20px;
+    font-size: 30px;
+    color: #7b6c63;
+    font-weight: 400;
+    letter-spacing: 0.09em;
+  }
+  .about .aboutInner .aboutTitleUnderLine {
+    display: block;
+    width: 60px;
+    height: 1px;
+    margin: 0 auto;
+    padding-bottom: 20px;
+    border: 0;
+    border-top: 3px solid #7b6c63;
+  }
+  .about .aboutInner .aboutText {
+    color: #000;
+    line-height: 1.6em;
+  }
 
-.nav {
-  float: right;
-  padding-top: 15px;
-}
+  .business {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+  }
+  .business .businessInner {
+    display: table-cell;
+    vertical-align: top;
+    text-align: center;
+    padding-left: 20px;
+  }
+  .business .businessInner .businessInnerImg {
+    width: 30px;
+    height: 30px;
+  }
+  .business .businessInner .businessInnerTitle {
+    padding: 10px 0;
+    font-weight: 300;
+    letter-spacing: 0.08em;
+  }
+  .business .businessInner .businessInnerText {
+    font-size: 13px;
+    color: #949494;
+    line-height: 1.6em;
+  }
+  .business .businessInner:first-child {
+    padding-left: 0;
+  }
 
-.menu {
-  display: table;
-  table-layout: auto;
-}
-
-.menuList {
-  display: table-cell;
-  vertical-align: top;
-  text-align: right;
-  padding-left: 20px;
-}
-
-.menuInner {
-  font-size: 14px;
-  color: #FFF;
-  font-weight: 300;
-}
-
-.menuInner:hover {
-  border-bottom: 3px solid #7b6c63;
-  padding-bottom: 4px;
-}
-
-/* visual */
-.visual {
-  width: 100%;
-  height: auto;
-  background-image: url(images/bg.png);
-  background-position: 0 30%;
-  background-size: 100% 150%;
-  background-repeat: no-repeat;
-}
-
-.visualInner {
-  height: 450px;
-}
-
-.visualText {
-  padding-top: 100px;
-  color: #FFF;
-}
-
-.visualTitle {
-  margin: 5px 0 30px 0;
-  font-size: 40px;
-  font-weight: 400;
-  line-height: 1.2em;
-  letter-spacing: 0.08em;
-}
-
-.visualTitleColor {
-  color: #7b6c63;
-}
-
-.visualContact {
-  display: block;
-  width: 200px;
-  padding: 15px 0px;
-  text-align: center;
-  background-color: rgba(200,200,200,0.2);
-}
-
-.visualContact:hover {
-  background-color: rgba(200,200,200,0.4);
-}
-
-.visualContactText {
-  color: #FFF;
-}
-
-/* content */
-.about {
-  width: 100%;
-  height: auto;
-}
-
-.aboutInner {
-  width: 400px;
-  margin: 0 auto 30px auto;
-  text-align: center;
-}
-
-.aboutTitle {
-  padding-bottom: 20px;
-  font-size: 30px;
-  color: #7b6c63;
-  font-weight: 400;
-  letter-spacing: 0.09em;
-}
-
-.aboutTitleUnderLine {
-  display: block;
-  width: 60px;
-  height: 1px;
-  margin: 0 auto;
-  padding-bottom: 20px;
-  border: 0;
-  border-top: 3px solid #7b6c63;
-}
-
-.aboutText {
-  color: #000;
-  line-height: 1.6em;
-}
-
-.business {
-  display: table;
-  table-layout: fixed;
-  width: 100%;
-}
-
-.businessInner {
-  display: table-cell;
-  vertical-align: top;
-  text-align: center;
-  padding-left: 20px;
-}
-
-.businessInner:first-child {
-  padding-left: 0;
-}
-
-.businessInnerImg {
-  width: 30px;
-  height: 30px;
-}
-
-.businessInnerTitle {
-  padding: 10px 0;
-  font-weight: 300;
-  letter-spacing: 0.08em;
-}
-
-.businessInnerText {
-  font-size: 13px;
-  color: #949494;
-  line-height: 1.6em;
-}
-
-/* footer */
-.copyright {
-  text-align: center;
-}
-
-.smallFont {
-  font-size: 12px;
-  color: #4d4d4d;
-}
+  /* footer */
+  .copyright {
+    text-align: center;
+  }
+  .copyright .smallFont {
+    font-size: 12px;
+    color: #4d4d4d;
+  }
 }
