--- a/_mobile.scss
+++ b/_mobile.scss
@@ -1,17 +1,16 @@
 /*===== Mobile Size =====*/
-@media screen and (max-width: 497px) {
+@media screen and (max-width: 640px) {
 
 .layoutInner {
   margin: 0 auto;
-  max-width: 1040px;
   width: 90%;
 }
 
 /* header */
 .headerLogo {
   float: left;
-  padding-top: 15px;
-  font-size: 24px;
+  padding: 30px 0;
+  font-size: 35px;
   color: #FFF;
   font-weight: 400;
   letter-spacing: 0.08em;
@@ -20,19 +19,20 @@
 /* menu */
 .toggle{
   display: block;
-  width: 30px;
-  height: 30px;
-  background: #000;
+  background: #303030;
   position: absolute;
-  top: 15px;
+  top: 30px;
   right: 0;
   .toggleBar {
     display: block;
-    width: 30px;
+    width: 45px;
     height: 0;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     border: 0;
-    border-bottom: solid 3px #FFF;
+    border-bottom: solid 5px #FFF;
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -40,7 +40,7 @@
   display: none;
   width: 100%;
   position: absolute;
-  top: 50px;
+  top: 95px;
   left: 0;
   .menuList {
     text-align: center;
@@ -54,8 +54,8 @@
     }
 
     .menuInner:hover {
-      border-bottom: 3px solid #7b6c63;
-      padding-bottom: 4px;
+      border-bottom: 5px solid #7b6c63;
+      padding-bottom: 10px;
     }
   }
 }
@@ -66,45 +66,48 @@
 .visual {
   width: 100%;
   height: auto;
-  background-image: url(images/bg.png);
+  background-image: url(images/sp_bg.png);
   background-position: left top;
-  background-size: 100% 150%;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
   .visualInner {
-    height: 350px;
+    height: 675px;
     .visualText {
       text-align: center;
-      padding-top: 100px;
+      padding-top: 230px;
       color: #FFF;
       .visualSubTitle {
         display: none;
       }
 
       .visualTitle {
-        margin-bottom: 50px;
-        font-size: 26px;
-        font-weight: 300;
-        line-height: 1.2em;
-        letter-spacing: 0.08em;
-        .visualTitleColor {
-          color: #7b6c63;
+        margin-bottom: 130px;
+        .visualTitleFont {
+          margin-bottom: 30px;
+          font-size: 43px;
+          font-weight: 400;
+          line-height: 1.2em;
+          letter-spacing: 0.2em;
+          .visualTitleColor {
+            color: #7b6c63;
+          }
         }
       }
       .visualContact {
         display: block;
-        width: 200px;
-        height: 50px;
+        width: 330px;
+        height: 75px;
         margin: 0 auto;
         text-align: center;
-        background-color: rgba(200,200,200,0.2);
+        background-color: rgba(200,200,200,0.1);
         .visualContactText {
           display: block;
-          padding-top: 15px;
+          padding-top: 30px;
           color: #FFF;
         }
       }
       .visualContact:hover {
-        background-color: rgba(200,200,200,0.4);
+        background-color: rgba(200,200,200,0.3);
       }
     }
   }
