--- a/style.css
+++ b/style.css
@@ -26,18 +26,17 @@
 
 /*============ Device ==========*/
 /*===== Mobile Size =====*/
-@media screen and (max-width: 497px) {
+@media screen and (max-width: 640px) {
   .layoutInner {
     margin: 0 auto;
-    max-width: 1040px;
     width: 90%;
   }
 
   /* header */
   .headerLogo {
     float: left;
-    padding-top: 15px;
-    font-size: 24px;
+    padding: 30px 0;
+    font-size: 35px;
     color: #FFF;
     font-weight: 400;
     letter-spacing: 0.08em;
@@ -46,27 +45,28 @@
   /* menu */
   .toggle {
     display: block;
-    width: 30px;
-    height: 30px;
-    background: #000;
+    background: #303030;
     position: absolute;
-    top: 15px;
+    top: 30px;
     right: 0;
   }
   .toggle .toggleBar {
     display: block;
-    width: 30px;
+    width: 45px;
     height: 0;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     border: 0;
-    border-bottom: solid 3px #FFF;
+    border-bottom: solid 5px #FFF;
+  }
+  .toggle .toggleBar:last-child {
+    margin-bottom: 0;
   }
 
   .menu {
     display: none;
     width: 100%;
     position: absolute;
-    top: 50px;
+    top: 95px;
     left: 0;
   }
   .menu .menuList {
@@ -81,55 +81,58 @@
     font-weight: 300;
   }
   .menu .menuList .menuInner:hover {
-    border-bottom: 3px solid #7b6c63;
-    padding-bottom: 4px;
+    border-bottom: 5px solid #7b6c63;
+    padding-bottom: 10px;
   }
 
   /* visual */
   .visual {
     width: 100%;
     height: auto;
-    background-image: url(images/bg.png);
+    background-image: url(images/sp_bg.png);
     background-position: left top;
-    background-size: 100% 150%;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
   }
   .visual .visualInner {
-    height: 350px;
+    height: 675px;
   }
   .visual .visualInner .visualText {
     text-align: center;
-    padding-top: 100px;
+    padding-top: 230px;
     color: #FFF;
   }
   .visual .visualInner .visualText .visualSubTitle {
     display: none;
   }
   .visual .visualInner .visualText .visualTitle {
-    margin-bottom: 50px;
-    font-size: 26px;
-    font-weight: 300;
-    line-height: 1.2em;
-    letter-spacing: 0.08em;
+    margin-bottom: 130px;
   }
-  .visual .visualInner .visualText .visualTitle .visualTitleColor {
+  .visual .visualInner .visualText .visualTitle .visualTitleFont {
+    margin-bottom: 30px;
+    font-size: 43px;
+    font-weight: 400;
+    line-height: 1.2em;
+    letter-spacing: 0.2em;
+  }
+  .visual .visualInner .visualText .visualTitle .visualTitleFont .visualTitleColor {
     color: #7b6c63;
   }
   .visual .visualInner .visualText .visualContact {
     display: block;
-    width: 200px;
-    height: 50px;
+    width: 330px;
+    height: 75px;
     margin: 0 auto;
     text-align: center;
-    background-color: rgba(200, 200, 200, 0.2);
+    background-color: rgba(200, 200, 200, 0.1);
   }
   .visual .visualInner .visualText .visualContact .visualContactText {
     display: block;
-    padding-top: 15px;
+    padding-top: 30px;
     color: #FFF;
   }
   .visual .visualInner .visualText .visualContact:hover {
-    background-color: rgba(200, 200, 200, 0.4);
+    background-color: rgba(200, 200, 200, 0.3);
   }
 
   /* content */
@@ -196,7 +199,7 @@
   }
 }
 /*==== Middle Size ====*/
-@media screen and (min-width: 498px) and (max-width: 767px) {
+@media screen and (min-width: 641px) and (max-width: 767px) {
   .layoutInner {
     margin: 0 auto;
     width: 90%;
@@ -258,9 +261,9 @@
   .visual {
     width: 100%;
     height: auto;
-    background-image: url(images/bg.png);
-    background-position: 0 30%;
-    background-size: 100% 150%;
+    background-image: url(images/pc_bg.png);
+    background-position: left top;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
   }
   .visual .visualInner {
@@ -417,9 +420,9 @@
   .visual {
     width: 100%;
     height: auto;
-    background-image: url(images/bg.png);
-    background-position: 0 30%;
-    background-size: 100% 150%;
+    background-image: url(images/pc_bg.png);
+    background-position: left top;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
   }
   .visual .visualInner {
@@ -447,16 +450,18 @@
   .visual .visualInner .visualText .visualContact {
     display: block;
     width: 265px;
-    padding: 24px 0px;
+    height: 60px;
     font-size: 12px;
     text-align: center;
-    background-color: rgba(68, 57, 45, 0.2);
+    background-color: rgba(200, 200, 200, 0.1);
   }
   .visual .visualInner .visualText .visualContact .visualContactText {
+    display: block;
+    padding-top: 25px;
     color: #FFF;
   }
   .visual .visualInner .visualText .visualContact:hover {
-    background-color: rgba(68, 57, 45, 0.6);
+    background-color: rgba(200, 200, 200, 0.3);
   }
 
   /* content */
@@ -499,7 +504,7 @@
     display: table-cell;
     vertical-align: top;
     text-align: center;
-    padding-left: 30px;
+    padding-left: 20px;
   }
   .business .businessInner .businessInnerImg {
     width: 30px;
@@ -512,9 +517,9 @@
     letter-spacing: 0.2em;
   }
   .business .businessInner .businessInnerText {
-    font-size: 12px;
+    font-size: 13px;
     color: #949494;
-    line-height: 1.6em;
+    line-height: 2em;
   }
   .business .businessInner:first-child {
     padding-left: 0;
