middle design fix

--- a/_middle.scss
+++ b/_middle.scss
@@ -1,5 +1,5 @@
 /*==== Middle Size ====*/
-@media screen and (min-width: 641px) and (max-width: 767px) {
+@media screen and (min-width: 641px) and (max-width: 860px) {
 .layoutInner {
   margin: 0 auto;
   width: 90%;
@@ -8,8 +8,8 @@
 /* header */
 .headerLogo {
   float: left;
-  padding-top: 15px;
-  font-size: 24px;
+  padding: 30px 0;
+  font-size: 35px;
   color: #FFF;
   font-weight: 400;
   letter-spacing: 0.08em;
@@ -18,19 +18,20 @@
 /* menu */
 .toggle{
   display: block;
-  width: 30px;
-  height: 30px;
-  background: #000;
+  background: #303030;
   position: absolute;
-  top: 15px;
+  top: 30px;
   right: 0;
   .toggleBar {
     display: block;
-    width: 30px;
+    width: 45px;
     height: 0;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     border: 0;
-    border-bottom: solid 3px #FFF;
+    border-bottom: solid 5px #FFF;
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -38,7 +39,7 @@
   display: none;
   width: 100%;
   position: absolute;
-  top: 50px;
+  top: 95px;
   left: 0;
   .menuList {
     text-align: center;
@@ -52,8 +53,8 @@
     }
 
     .menuInner:hover {
-      border-bottom: 3px solid #7b6c63;
-      padding-bottom: 4px;
+      border-bottom: 5px solid #7b6c63;
+      padding-bottom: 10px;
     }
   }
 }
@@ -67,32 +68,41 @@
   background-size: 100% 100%;
   background-repeat: no-repeat;
   .visualInner {
-    height: 450px;
+    height: 550px;
     .visualText {
-      padding-top: 100px;
+      padding-top: 150px;
       color: #FFF;
+      .visualSubTitle {
+        font-size: 17px;
+      }
       .visualTitle {
-        margin: 5px 0 30px 0;
-        font-size: 40px;
-        font-weight: 400;
-        line-height: 1.2em;
-        letter-spacing: 0.08em;
-        .visualTitleColor {
-          color: #7b6c63;
+        margin: 30px 0 70px 0;
+        .visualTitleFont {
+          margin-bottom: 30px;
+          font-size: 47px;
+          font-weight: 400;
+          letter-spacing: 0.08em;
+          .visualTitleColor {
+            color: #7b6c63;
+          }
         }
       }
       .visualContact {
         display: block;
-        width: 200px;
-        padding: 15px 0px;
+        width: 265px;
+        height: 60px;
         text-align: center;
-        background-color: rgba(200,200,200,0.2);
+        background-color: rgba(200, 200, 200, 0.1);
         .visualContactText {
+          display: block;
+          font-size: 12px;
+          letter-spacing: 0.2em;
+          padding-top: 25px;
           color: #FFF;
         }
       }
       .visualContact:hover {
-        background-color: rgba(200,200,200,0.4);
+        background-color: rgba(200,200,200,0.3);
       }
     }
   }
@@ -104,24 +114,24 @@
   width: 100%;
   height: auto;
   .aboutInner {
-    width: 400px;
-    margin: 0 auto 30px auto;
+    width: 430px;
+    margin: 0 auto 90px auto;
     text-align: center;
     .aboutTitle {
-      padding-bottom: 20px;
-      font-size: 30px;
+      padding-bottom: 50px;
+      font-size: 29px;
       color: #7b6c63;
-      font-weight: 400;
-      letter-spacing: 0.09em;
+      font-weight: 500;
+      letter-spacing: 0.2em;
     }
     .aboutTitleUnderLine {
       display: block;
-      width: 60px;
-      height: 1px;
+      width: 75px;
+      height: 0;
       margin: 0 auto;
-      padding-bottom: 20px;
+      padding-bottom: 45px;
       border: 0;
-      border-top: 3px solid #7b6c63;
+      border-top: 6px solid #7b6c63;
     }
     .aboutText {
       color: #000;
@@ -144,14 +154,15 @@
       height: 30px;
     }
     .businessInnerTitle {
-      padding: 10px 0;
-      font-weight: 300;
-      letter-spacing: 0.08em;
+      padding: 25px 0;
+      font-size: 14px;
+      font-weight: 400;
+      letter-spacing: 0.2em;
     }
     .businessInnerText {
       font-size: 13px;
       color: #949494;
-      line-height: 1.6em;
+      line-height: 2em;
     }
   }
   .businessInner:first-child {
@@ -164,6 +175,7 @@
   text-align: center;
   .smallFont {
     font-size: 12px;
+    letter-spacing: 0.15em;
     color: #4d4d4d;
   }
 }
