--- a/_pc.scss
+++ b/_pc.scss
@@ -1,7 +1,7 @@
 /* PC Size  */
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 861px) {
 
-@media screen and (min-width: 768px) and (max-width: 960px) {
+@media screen and (min-width: 861px) and (max-width: 960px) {
 .layoutInner {
   margin: 0 auto;
   width: 85%;
@@ -12,6 +12,7 @@
 .layoutInner {
   margin: 0 auto;
   max-width: 1060px;
+  width: 90%;
 }
 }
 
