--- a/style.scss
+++ b/style.scss
@@ -28,7 +28,8 @@
 
 
 /*============ Device ==========*/
-@import "mobile";
+@import "mobile_small";
+@import "mobile_large";
 @import "middle";
 @import "pc";
 
