--- a/_mobile_large.scss
+++ b/_mobile_large.scss
@@ -1,5 +1,5 @@
-/*===== Mobile Size =====*/
-@media screen and (max-width: 640px) {
+/*===== Mobile Large Size =====*/
+@media screen and (min-width: 461px) and (max-width: 640px) {
 
 .layoutInner {
   margin: 0 auto;
