--- a/_middle.scss
+++ b/_middle.scss
@@ -1,10 +1,5 @@
 /*==== Middle Size ====*/
 @media screen and (min-width: 641px) and (max-width: 860px) {
-.layoutInner {
-  margin: 0 auto;
-  width: 90%;
-}
-
 /* header */
 .headerLogo {
   float: left;
@@ -18,7 +13,7 @@
 /* menu */
 .toggle{
   display: block;
-  background: #303030;
+  background: $c-headerBg;
   position: absolute;
   top: 30px;
   right: 0;
@@ -43,17 +38,19 @@
   left: 0;
   .menuList {
     text-align: center;
-    background-color: #303030;
+    background-color: $c-headerBg;
     height: 50px;
     padding-top: 20px;
     .menuInner {
+      display: block;
       font-size: 24px;
       color: #FFF;
       font-weight: 300;
+      letter-spacing: 0.12em;
     }
 
     .menuInner:hover {
-      border-bottom: 5px solid #7b6c63;
+      border-bottom: 5px solid $c-menuHover;
       padding-bottom: 10px;
     }
   }
@@ -125,7 +122,6 @@
       letter-spacing: 0.2em;
     }
     .aboutTitleUnderLine {
-      display: block;
       width: 75px;
       height: 0;
       margin: 0 auto;
@@ -176,7 +172,7 @@
   .smallFont {
     font-size: 12px;
     letter-spacing: 0.15em;
-    color: #4d4d4d;
+    color: $c-copyright;
   }
 }
 
