--- a/_pc.scss
+++ b/_pc.scss
@@ -1,21 +1,6 @@
 /* PC Size  */
 @media screen and (min-width: 861px) {
 
-@media screen and (min-width: 861px) and (max-width: 960px) {
-.layoutInner {
-  margin: 0 auto;
-  width: 85%;
-}
-}
-
-@media screen and (min-width: 961px) {
-.layoutInner {
-  margin: 0 auto;
-  max-width: 1060px;
-  width: 90%;
-}
-}
-
 /* header */
 .headerLogo {
   float: left;
@@ -39,14 +24,15 @@
       display: table-cell;
       vertical-align: top;
       text-align: right;
-      padding-left: 40px;
+      padding-left: 35px;
       .menuInner {
         font-size: 14px;
         color: #FFF;
         font-weight: 300;
+        letter-spacing: 0.12em;
       }
       .menuInner:hover {
-        border-bottom: 5px solid #7b6c63;
+        border-bottom: 5px solid $c-menuHover;
         padding-bottom: 10px;
       }
     }
@@ -172,7 +158,7 @@
   .smallFont {
     font-size: 12px;
     letter-spacing: 0.15em;
-    color: #4d4d4d;
+    color: $c-copyright;
   }
 }
 
