--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,10 @@
 /*======= Common Color =========*/
+$c-Accent: #7b6c63;
+
 $c-headerBg: #303030;
-$c-menuHover: #7b6c63;
+$c-visualContact: rgba(200,200,200,0.1);
+$c-visualContactHover: rgba(200,200,200,0.3);
+$c-businessInnerText: #949494;
 $c-copyright: #4d4d4d;
 
 
