--- a/_pc.scss
+++ b/_pc.scss
@@ -32,7 +32,7 @@
         letter-spacing: 0.12em;
       }
       .menuInner:hover {
-        border-bottom: 5px solid $c-menuHover;
+        border-bottom: 5px solid $c-Accent;
         padding-bottom: 10px;
       }
     }
@@ -65,7 +65,7 @@
           font-weight: 400;
           letter-spacing: 0.08em;
           .visualTitleColor {
-            color: #7b6c63;
+            color: $c-Accent;
           }
         }
       }
@@ -74,7 +74,7 @@
         width: 265px;
         height: 60px;
         text-align: center;
-        background-color: rgba(200, 200, 200, 0.1);
+        background-color: $c-visualContact;
         .visualContactText {
           display: block;
           font-size: 12px;
@@ -84,7 +84,7 @@
         }
       }
       .visualContact:hover {
-        background-color: rgba(200,200,200,0.3);
+        background-color: $c-visualContactHover;
       }
     }
   }
@@ -102,7 +102,7 @@
     .aboutTitle {
       padding-bottom: 50px;
       font-size: 29px;
-      color: #7b6c63;
+      color: $c-aboutTitle;
       font-weight: 500;
       letter-spacing: 0.2em;
     }
@@ -113,7 +113,7 @@
       margin: 0 auto;
       padding-bottom: 45px;
       border: 0;
-      border-top: 6px solid #7b6c63;
+      border-top: 6px solid $c-Accent;
     }
     .aboutText {
       color: #000;
@@ -143,7 +143,7 @@
     }
     .businessInnerText {
       font-size: 13px;
-      color: #949494;
+      color: $c-businessInnerText;
       line-height: 2em;
     }
   }
