--- a/_mobile_large.scss
+++ b/_mobile_large.scss
@@ -121,7 +121,7 @@
     .aboutTitle {
       padding-bottom: 50px;
       font-size: 37px;
-      color: $c-aboutTitle;
+      color: $c-Accent;
       font-weight: 400;
       letter-spacing: 0.2em;
     }
