--- a/_pc.scss
+++ b/_pc.scss
@@ -102,7 +102,7 @@
     .aboutTitle {
       padding-bottom: 50px;
       font-size: 29px;
-      color: $c-aboutTitle;
+      color: $c-Accent;
       font-weight: 500;
       letter-spacing: 0.2em;
     }
